--- a/llama_3_agents_langgraph_groq/langgraph_agents.ipynb
+++ b/llama_3_agents_langgraph_groq/langgraph_agents.ipynb
@@ -336,6 +336,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a Langgraph agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.graph import StateGraph, END\n",
+    "from typing import TypedDict, Annotated\n",
+    "import operator\n",
+    "from langchain_core.messages import AnyMessage, SystemMessage, HumanMessage, ToolMessage\n",
+    "from langchain_community.tools.tavily_search import TavilySearchResults"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'langchain_community.tools.tavily_search.tool.TavilySearchResults'>\n",
+      "tavily_search_results_json\n"
+     ]
+    }
+   ],
+   "source": [
+    "tool = TavilySearchResults(max_results=2) #increased number of results\n",
+    "print(type(tool))\n",
+    "print(tool.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AgentState(TypedDict):\n",
+    "    messages: Annotated[list[AnyMessage], operator.add]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Agent:\n",
+    "\n",
+    "    def __init__(self, model, tools, system=\"\"):\n",
+    "        self.system = system\n",
+    "        graph = StateGraph(AgentState)\n",
+    "        graph.add_node(\"llm\", self.call_openai)\n",
+    "        graph.add_node(\"action\", self.take_action)\n",
+    "        graph.add_conditional_edges(\n",
+    "            \"llm\",\n",
+    "            self.exists_action,\n",
+    "            {True: \"action\", False: END}\n",
+    "        )\n",
+    "        graph.add_edge(\"action\", \"llm\")\n",
+    "        graph.set_entry_point(\"llm\")\n",
+    "        self.graph = graph.compile()\n",
+    "        self.tools = {t.name: t for t in tools}\n",
+    "        self.model = model.bind_tools(tools)\n",
+    "\n",
+    "    def exists_action(self, state: AgentState):\n",
+    "        result = state['messages'][-1]\n",
+    "        return len(result.tool_calls) > 0\n",
+    "\n",
+    "    def call_openai(self, state: AgentState):\n",
+    "        messages = state['messages']\n",
+    "        if self.system:\n",
+    "            messages = [SystemMessage(content=self.system)] + messages\n",
+    "        message = self.model.invoke(messages)\n",
+    "        return {'messages': [message]}\n",
+    "\n",
+    "    def take_action(self, state: AgentState):\n",
+    "        tool_calls = state['messages'][-1].tool_calls\n",
+    "        results = []\n",
+    "        for t in tool_calls:\n",
+    "            print(f\"Calling: {t}\")\n",
+    "            if not t['name'] in self.tools:      # check for bad tool name from LLM\n",
+    "                print(\"\\n ....bad tool name....\")\n",
+    "                result = \"bad tool name, retry\"  # instruct LLM to retry if bad\n",
+    "            else:\n",
+    "                result = self.tools[t['name']].invoke(t['args'])\n",
+    "            results.append(ToolMessage(tool_call_id=t['id'], name=t['name'], content=str(result)))\n",
+    "        print(\"Back to the model!\")\n",
+    "        return {'messages': results}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_groq import ChatGroq\n",
+    "\n",
+    "llm = ChatGroq(\n",
+    "    model=MODEL,\n",
+    "    temperature=0,\n",
+    "    max_tokens=None,\n",
+    "    timeout=None,\n",
+    "    max_retries=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"\"\"You are a smart research assistant. Use the search engine to look up information. \\\n",
+    "You are allowed to make multiple calls (either together or in sequence). \\\n",
+    "Only look up information when you are sure of what you want. \\\n",
+    "If you need to look up some information before asking a follow up question, you are allowed to do that!\n",
+    "\"\"\"\n",
+    "\n",
+    "# model = ChatOpenAI(model=\"gpt-3.5-turbo\")  #reduce inference cost\n",
+    "abot = Agent(llm, [tool], system=prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'San Francisco weather today'}, 'id': 'call_ffy0', 'type': 'tool_call'}\n",
+      "Back to the model!\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages = [HumanMessage(content=\"What is the weather in sf?\")]\n",
+    "result = abot.graph.invoke({\"messages\": messages})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The current weather in San Francisco is partly cloudy with a temperature of 53.1°F (11.7°C) and a feels-like temperature of 49.5°F (9.7°C). The wind is blowing at 11.0 mph (17.6 kph) from the northwest, and the humidity is 86%.'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result['messages'][-1].content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'Super Bowl 2024 winner'}, 'id': 'call_0st7', 'type': 'tool_call'}\n",
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'headquarters location of Super Bowl 2024 winner'}, 'id': 'call_bzrm', 'type': 'tool_call'}\n",
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'GDP of state where Super Bowl 2024 winner is headquartered'}, 'id': 'call_1rsd', 'type': 'tool_call'}\n",
+      "Back to the model!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# From the results, it looks like all the tool calls were done parallely as the model in the 2nd tool call does not have any input about Super Bowl 2024 winner\n",
+    "\n",
+    "query = \"Who won the super bowl in 2024? In what state is the winning team headquarters located? \\\n",
+    "What is the GDP of that state? Answer each question.\" \n",
+    "messages = [HumanMessage(content=query)]\n",
+    "\n",
+    "abot = Agent(llm, [tool], system=prompt)\n",
+    "result = abot.graph.invoke({\"messages\": messages})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The winner of the Super Bowl in 2024 was the Kansas City Chiefs. The Kansas City Chiefs are headquartered in Missouri. The GDP of Missouri is $373.4 billion.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result['messages'][-1].content)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
