langgraph chain - experiment

--- a/llama_3_agents_langgraph_groq/langgraph_agents.ipynb
+++ b/llama_3_agents_langgraph_groq/langgraph_agents.ipynb
@@ -509,24 +509,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'Super Bowl 2024 winner'}, 'id': 'call_0st7', 'type': 'tool_call'}\n",
-      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'headquarters location of Super Bowl 2024 winner'}, 'id': 'call_bzrm', 'type': 'tool_call'}\n",
-      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'GDP of state where Super Bowl 2024 winner is headquartered'}, 'id': 'call_1rsd', 'type': 'tool_call'}\n",
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'Super Bowl 2021 winner'}, 'id': 'call_0s2t', 'type': 'tool_call'}\n",
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'Tampa Bay Buccaneers headquarters location'}, 'id': 'call_kqzp', 'type': 'tool_call'}\n",
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'GDP of Florida'}, 'id': 'call_avhe', 'type': 'tool_call'}\n",
       "Back to the model!\n"
      ]
     }
    ],
    "source": [
-    "# From the results, it looks like all the tool calls were done parallely as the model in the 2nd tool call does not have any input about Super Bowl 2024 winner\n",
+    "# From the results, it looks like all the tool calls were done parallely for year 2024 as the model in the 2nd tool call does not have any input about Super Bowl 2024 winner\n",
     "\n",
-    "query = \"Who won the super bowl in 2024? In what state is the winning team headquarters located? \\\n",
+    "query = \"Who won the super bowl in 2021? In what state is the winning team headquarters located? \\\n",
     "What is the GDP of that state? Answer each question.\" \n",
     "messages = [HumanMessage(content=query)]\n",
     "\n",
@@ -536,19 +536,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"Who won the super bowl in 2021? In what state is the winning team headquarters located? \\\n",
+    "What is the GDP of that state? Answer each question.\" \n",
+    "messages = [HumanMessage(content=query)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The winner of the Super Bowl in 2024 was the Kansas City Chiefs. The Kansas City Chiefs are headquartered in Missouri. The GDP of Missouri is $373.4 billion.\n"
+      "The winner of the Super Bowl in 2021 was the Tampa Bay Buccaneers. The Tampa Bay Buccaneers' headquarters is located in the state of Florida. The GDP of Florida is approximately $1.28 trillion.\n"
      ]
     }
    ],
    "source": [
     "print(result['messages'][-1].content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.runnables import RunnableLambda\n",
+    "question_prompt_template=ChatPromptTemplate.from_template(\"Who won the super bowl in {year}? In what state is the winning team headquarters located? \\\n",
+    "What is the GDP of that state? Answer each question.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = question_prompt_template | RunnableLambda(lambda x: {\"messages\": x.messages})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptValue(messages=[HumanMessage(content='Who won the super bowl in 2022? In what state is the winning team headquarters located? What is the GDP of that state? Answer each question.', additional_kwargs={}, response_metadata={})])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question_prompt_template.invoke({\"year\":2022}) | "
    ]
   },
   {
