langgraph chain - experiment - adding one more variable

--- a/llama_3_agents_langgraph_groq/langgraph_agents.ipynb
+++ b/llama_3_agents_langgraph_groq/langgraph_agents.ipynb
@@ -564,43 +564,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.runnables import RunnableLambda\n",
-    "question_prompt_template=ChatPromptTemplate.from_template(\"Who won the super bowl in {year}? In what state is the winning team headquarters located? \\\n",
+    "question_prompt_template=ChatPromptTemplate.from_template(\"Who won the {competition} in {year}? In what state is the winning team headquarters located? \\\n",
     "What is the GDP of that state? Answer each question.\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "chain = question_prompt_template | RunnableLambda(lambda x: {\"messages\": x.messages})"
+    "## creating a chain for making the call more programmatic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_chain = question_prompt_template | RunnableLambda(lambda x: {\"messages\": x.messages}) | abot.graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "ChatPromptValue(messages=[HumanMessage(content='Who won the super bowl in 2022? In what state is the winning team headquarters located? What is the GDP of that state? Answer each question.', additional_kwargs={}, response_metadata={})])"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'La Liga 2023 winner'}, 'id': 'call_jt1j', 'type': 'tool_call'}\n",
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'headquarters location of La Liga 2023 winner'}, 'id': 'call_24xk', 'type': 'tool_call'}\n",
+      "Calling: {'name': 'tavily_search_results_json', 'args': {'query': 'GDP of state where La Liga 2023 winner is located'}, 'id': 'call_rem2', 'type': 'tool_call'}\n",
+      "Back to the model!\n"
+     ]
     }
    ],
    "source": [
-    "question_prompt_template.invoke({\"year\":2022}) | "
+    "result = graph_chain.invoke({\"year\": 2023, \"competition\": \"La Liga\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The winner of the La Liga in 2023 was Barcelona. The headquarters of Barcelona is located in the state of Catalonia, Spain. The GDP of Catalonia is approximately $255 billion.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result['messages'][-1].content)"
    ]
   },
   {
