testing dspy for auotamted prompting - signature testing

--- a/dspy/dspy_rag.ipynb
+++ b/dspy/dspy_rag.ipynb
@@ -36,6 +36,212 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## sentiment classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = \"it's a charming and often affecting journey.\"  # example from the SST-2 dataset.\n",
+    "\n",
+    "classify = dspy.Predict('sentence -> sentiment: bool')  # we'll see an example with Literal[] later\n",
+    "classify(sentence=sentence).sentiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## summarization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Footballer Lee signs with Barnsley after playing for West Ham and having loan spells.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example from the XSum dataset.\n",
+    "document = \"\"\"The 21-year-old made seven appearances for the Hammers and netted his only goal for them in a Europa League qualification round match against Andorran side FC Lustrains last season. Lee had two loan spells in League One last term, with Blackpool and then Colchester United. He scored twice for the U's but was unable to save them from relegation. The length of Lee's contract with the promoted Tykes has not been revealed. Find all the latest football transfers on our dedicated page.\"\"\"\n",
+    "\n",
+    "summarize = dspy.ChainOfThought('document -> summary')\n",
+    "response = summarize(document=document)\n",
+    "\n",
+    "print(response.summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reasoning: The text is about a 21-year-old footballer named Lee who has signed a contract with Barnsley (the Tykes) after playing for West Ham United and having loan spells with Blackpool and Colchester United.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Reasoning:\", response.reasoning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    sentiment='fear'\n",
+       ")"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import Literal\n",
+    "\n",
+    "class Emotion(dspy.Signature):\n",
+    "    \"\"\"Classify emotion.\"\"\"\n",
+    "\n",
+    "    sentence: str = dspy.InputField()\n",
+    "    sentiment: Literal['sadness', 'joy', 'love', 'anger', 'fear', 'surprise'] = dspy.OutputField()\n",
+    "\n",
+    "sentence = \"i started feeling a little vulnerable when the giant spotlight started blinding me\"  # from dair-ai/emotion\n",
+    "\n",
+    "classify = dspy.Predict(Emotion)\n",
+    "classify(sentence=sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    reasoning=\"The text claims that Lee scored 3 goals for Colchester United, but the context states that he scored twice for the U's.\",\n",
+       "    faithfulness=False,\n",
+       "    evidence={\"Lee scored twice for the U's\": [\"He scored twice for the U's but was unable to save them from relegation.\"]}\n",
+       ")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class CheckCitationFaithfulness(dspy.Signature):\n",
+    "    \"\"\"Verify that the text is based on the provided context.\"\"\"\n",
+    "\n",
+    "    context: str = dspy.InputField(desc=\"facts here are assumed to be true\")\n",
+    "    text: str = dspy.InputField()\n",
+    "    faithfulness: bool = dspy.OutputField()\n",
+    "    evidence: dict[str, list[str]] = dspy.OutputField(desc=\"Supporting evidence for claims\")\n",
+    "\n",
+    "context = \"The 21-year-old made seven appearances for the Hammers and netted his only goal for them in a Europa League qualification round match against Andorran side FC Lustrains last season. Lee had two loan spells in League One last term, with Blackpool and then Colchester United. He scored twice for the U's but was unable to save them from relegation. The length of Lee's contract with the promoted Tykes has not been revealed. Find all the latest football transfers on our dedicated page.\"\n",
+    "\n",
+    "text = \"Lee scored 3 goals for Colchester United.\"\n",
+    "\n",
+    "faithfulness = dspy.ChainOfThought(CheckCitationFaithfulness)\n",
+    "faithfulness(context=context, text=text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In Linux, \"high memory\" and \"low memory\" refer to the way the kernel manages memory.\n",
+      "\n",
+      "Low memory refers to the first 896 MB of RAM, which is directly addressable by the kernel. This region is also known as the \"lowmem\" or \"normal zone\". The kernel can directly access this memory without any additional processing.\n",
+      "\n",
+      "High memory, on the other hand, refers to the memory above 896 MB. This region is also known as the \"highmem\" or \"high zone\". The kernel cannot directly access this memory and needs to use temporary mappings to access it. This is because the kernel's own memory space is limited to the low memory region.\n",
+      "\n",
+      "It's worth noting that these terms are somewhat outdated, as modern Linux systems can handle much larger amounts of RAM. However, the distinction between high and low memory remains relevant for understanding how the kernel manages memory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "qa = dspy.Predict('question: str -> response: str')\n",
+    "response = qa(question=\"what are high memory and low memory on linux?\")\n",
+    "\n",
+    "print(response.response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    reasoning='The question is asking about the formatting of curly braces in the interaction structure.',\n",
+       "    response='No, curly braces should not appear on their own line. They should be used to enclose the values of the input and output fields.'\n",
+       ")"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cot = dspy.ChainOfThought('question -> response')\n",
+    "cot(question=\"should curly braces appear on their own line?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dspy.inspect_history(n=1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
