testing dspy for auotamted prompting - cot module

--- a/dspy/dspy_rag.ipynb
+++ b/dspy/dspy_rag.ipynb
@@ -242,6 +242,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RAG-QA Arena"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 'ragqa_arena_tech_examples.jsonl'...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ujson\n",
+    "from dspy.utils import download\n",
+    "\n",
+    "# Download question--answer pairs from the RAG-QA Arena \"Tech\" dataset.\n",
+    "download(\"https://huggingface.co/dspy/cache/resolve/main/ragqa_arena_tech_examples.jsonl\")\n",
+    "\n",
+    "with open(\"ragqa_arena_tech_examples.jsonl\") as f:\n",
+    "    data = [ujson.loads(line) for line in f]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'question': 'why igp is used in mpls?',\n",
+       " 'response': \"An IGP exchanges routing prefixes between gateways/routers.  \\nWithout a routing protocol, you'd have to configure each route on every router and you'd have no dynamic updates when routes change because of link failures. \\nFuthermore, within an MPLS network, an IGP is vital for advertising the internal topology and ensuring connectivity for MP-BGP inside the network.\",\n",
+       " 'gold_doc_ids': [2822, 2823]}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [dspy.Example(**d).with_inputs('question') for d in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Example({'question': 'why are my text messages coming up as maybe?', 'response': 'This is part of the Proactivity features new with iOS 9: It looks at info in emails to see if anyone with this number sent you an email and if it finds the phone number associated with a contact from your email, it will show you \"Maybe\". \\n\\nHowever, it has been suggested there is a bug in iOS 11.2 that can result in \"Maybe\" being displayed even when \"Find Contacts in Other Apps\" is disabled.', 'gold_doc_ids': [3956, 3957, 8034]}) (input_keys={'question'})"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example = data[2]\n",
+    "example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 5, 5)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "random.Random(0).shuffle(data)\n",
+    "trainset, devset, testset = data[:20], data[20:25], data[25:30]\n",
+    "\n",
+    "len(trainset), len(devset), len(testset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of CPU cores: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import multiprocessing\n",
+    "\n",
+    "num_cores = multiprocessing.cpu_count()\n",
+    "print(f\"Number of CPU cores: {num_cores}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dspy.evaluate import SemanticF1\n",
+    "\n",
+    "# Instantiate the metric.\n",
+    "metric = SemanticF1(decompositional=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define an evaluator that we can re-use.\n",
+    "evaluate = dspy.Evaluate(devset=devset, metric=metric, num_threads=8,\n",
+    "                         display_progress=True, display_table=2)\n",
+    "\n",
+    "# Evaluate the Chain-of-Thought program.\n",
+    "evaluate(cot)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
